# OpenGL-Basics

./: CMakeLists.txt  README.md  ReadMe.txt  project_1
include/: config.h  drawing_lib.h  font.h  gui_panels.h  library.h  object.h  session.h
logger/: CMakeLists.txt  logger.cpp  logger.h
src/: drawing_lib.cpp  gui_panels.cpp  main.cpp  object.cpp  session.cpp
